Revision history for Perl module File::pushd

{{$NEXT}}

1.009     2014-07-03 13:17:48-04:00 America/New_York

    [FIXED]

    - s/0.95/0.96/ in t/File_pushd.t

1.008     2014-07-03 13:03:30-04:00 America/New_York

    [FIXED]

    - Require a newer version of Test::More

1.007     2014-05-30 23:59:02-04:00 America/New_York

    [FIXED]

    - Fixed a testing edge case on Windows

1.006     2014-03-27 15:29:36-04:00 America/New_York

    [DOCUMENTED]

    - Noted that multiple pushd objects in a lexical scope are not
      destroyed in a predictable order

    [CHANGED]

    - Modernized Dist::Zilla configuration and repo support files

1.005     2013-03-22 09:58:20 America/New_York

    [BUG FIXES]

    - Fix failing test for changing to non-existent directory on some
      older Perls for some platforms

1.004     2013-03-05 17:59:08 America/New_York

    [BUG FIXES]

    - Object destruction won't clobber $@

    [SUPPORT]

    - Changed issue tracker to Github

    - Dropped support for Perl 5.005

1.003     2012-11-27 17:49:03 America/New_York

    [BUG FIXES]

    - Fix test failures on Win32 when using perl.exe that must link to gcc
      DLL [rt.cpan.org #81476]

1.002     2011-12-07 11:40:26 EST5EDT

    [BUG FIXES]

    - Fix failures on cygwin [rt.cpan.org #73072 Reini Urban]

1.001     2011-09-14 22:49:56 America/New_York

    - updated docs to clarify that pushd() and tempd() croak on errors
    - if tempd() croaks, error appears at tempd()'s caller, not from within
      tempd() itself
    - warnings enabled if perl version >= 5.006
    - adds 'untaint_pattern' option with a passable default
    
1.00 Tue Sep 25 08:19:30 EDT 2007
    - changed to the Apache License, version 2.0; (it's clearer, relicensable,
      and is explicit about contributions)
    - moved pod/coverage tests to xt/ 
    - preserve() will preserve a temporary directory beyond the program end
      (by design rather than due to bug RT#21953 in File::Temp); added 